--- a/HCI Cooking/HCI Cooking/Pages/RecipeOverview.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeOverview.xaml
@@ -7,7 +7,7 @@
       d:DesignHeight="700" d:DesignWidth="1000"
 	Title="RecipeOverview">
 
-    <Grid>
+    <Grid Name="grdRecipeOverview">
         <Image Height="278" HorizontalAlignment="Left" Margin="599,12,0,0" Name="imgRecipePreview" Stretch="Fill" VerticalAlignment="Top" Width="389" />
         <Button Content="Start Cooking" FontFamily="Leelawadee" FontSize="24" Height="94" HorizontalAlignment="Left" Margin="694,566,0,0" Name="button1" VerticalAlignment="Top" Width="294" />
         <TextBlock Height="143" HorizontalAlignment="Left" Margin="12,12,0,0" Name="txtBlkRecipeIngred" Text="Recipe Ingredients" FontSize="20" VerticalAlignment="Top" Width="565" Background="#FFE2E2E2" />
@@ -20,7 +20,7 @@
             <Image Height="40" HorizontalAlignment="Left" Margin="22,184,0,0" Name="imgWhisking" Stretch="Fill" VerticalAlignment="Top" Width="46" />
             <Label Content="Mixing" FontFamily="Leelawadee" FontSize="20" Height="40" HorizontalAlignment="Left" Margin="83,46,0,0" Name="lblFolding" VerticalAlignment="Top" Width="238" />
             <Label Content="Decorating"  FontFamily="Leelawadee" FontSize="20" Height="40" HorizontalAlignment="Left" Margin="83,92,0,0" Name="lblWhisking" VerticalAlignment="Top" Width="238" />
-            <Label Content="Folding"  FontFamily="Leelawadee" FontSize="20" Height="40" HorizontalAlignment="Left" Margin="83,138,0,0" Name="lbl" VerticalAlignment="Top" Width="238" />
+            <Label Content="Folding"  FontFamily="Leelawadee" FontSize="20" Height="40" HorizontalAlignment="Left" Margin="83,138,0,0" Name="lbl" VerticalAlignment="Top" Width="108" />
             <Label Content="Whisking"  FontFamily="Leelawadee" FontSize="20" Height="40" HorizontalAlignment="Left" Margin="83,184,0,0" Name="label5" VerticalAlignment="Top" Width="238" />
             <Button Content="->" Height="27" HorizontalAlignment="Left" Margin="390,52,0,0" Name="btnMixPlay" VerticalAlignment="Top" Width="59" />
             <Button Content="->" Height="27" HorizontalAlignment="Left" Margin="390,98,0,0" Name="btnDecoPlay" VerticalAlignment="Top" Width="59" />
