--- a/HCI Cooking/HCI Cooking/Pages/RecipeSelectionMenu.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeSelectionMenu.xaml
@@ -7,7 +7,7 @@
       d:DesignHeight="700" d:DesignWidth="1000"
 	Title="RecipeSelectionMenu">
 
-    <Grid>
+    <Grid Name="grdRecipeSelectionMenu">
         <StackPanel Height="678" HorizontalAlignment="Left" Margin="10,10,0,0" Name="stpFilter" VerticalAlignment="Top" Width="200">
             <Expander Header="BBQ" Height="79" Name="expBeef" Width="201">
                 <Grid>
