--- a/HCI Cooking/HCI Cooking/Pages/CookingTechniqueLessons.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/CookingTechniqueLessons.xaml
@@ -1,23 +1,22 @@
-﻿<Page x:Class="HCI_Cooking.Pages.CookingTechniqueLessons"
+﻿<UserControl x:Class="HCI_Cooking.Pages.CookingTechniqueLessons"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="700" d:DesignWidth="1000"
-	Title="CookingTechniqueLessons">
+      d:DesignHeight="700" d:DesignWidth="1000">
 
     <Grid Name="grdCTLesson">
         <Label Content="Mango Pudding Cake" FontFamily="Leelawadee" FontSize="34" Height="54" HorizontalAlignment="Left" Margin="12,21,0,0" Name="lblMPCRecipeTitle" VerticalAlignment="Top" Width="391" />
         <Label Content="LESSON #IV: Folding" FontFamily="Leelawadee" FontSize="16" Height="31" HorizontalAlignment="Left" Margin="41,72,0,0" Name="lblLessonNum" VerticalAlignment="Top" Width="294" />
         <Label Content="How to fold ingredients" FontFamily="Leelawadee" FontSize="28" Height="62" HorizontalAlignment="Right" Margin="0,41,44,0" Name="lblChapOverviewHeader" VerticalAlignment="Top" Width="305" />
         <TextBlock Height="277" HorizontalAlignment="Left" Margin="651,95,0,0" Name="txtBlkChapOverview" Text="Video Chapter Overview" VerticalAlignment="Top" Width="329" Background="#FFE8DFDF" />
-        <Grid Height="249" HorizontalAlignment="Left" Margin="651,398,0,0" Name="grdLessonsTable" VerticalAlignment="Top" Width="329">
+        <Grid Height="249" HorizontalAlignment="Left" Margin="651,398,0,0" Name="grdLessonsTable" VerticalAlignment="Top" Width="329" Background="#FFF4F8E2">
             <Label Content="Lessons:" FontFamily="Leelawadee" FontSize="20" Height="38" Name="lblLessonsHeader" Margin="0,0,0,212" />
-            <Image Name="imgLessonI" Stretch="Fill" Margin="14,44,265,0" Height="45" VerticalAlignment="Top" />
-            <Image Name="imgLessonII" Stretch="Fill" Margin="14,95,265,0" Height="45" VerticalAlignment="Top" />
-            <Image Name="imgLessonIII" Stretch="Fill" Margin="14,146,265,0" Height="45" VerticalAlignment="Top" />
-            <Image Name="imgLessonIV" Stretch="Fill" Margin="14,197,265,0" Height="45" VerticalAlignment="Top" />
+            <Border Name="imgLessonI"  Margin="14,44,265,0" Height="45" VerticalAlignment="Top" BorderThickness="5" BorderBrush="White" Background="#FFBF7CA6" />
+            <Border Name="imgLessonII" Margin="14,95,265,0" Height="45" VerticalAlignment="Top" Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" />
+            <Border Name="imgLessonIII" Margin="14,146,265,0" Height="45" VerticalAlignment="Top" Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" />
+            <Border Name="imgLessonIV"  Margin="14,197,265,0" Height="45" VerticalAlignment="Top" Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" />
             <Label Content="Mixing" FontFamily="Leelawadee" FontSize="20" Height="45" HorizontalAlignment="Left" Margin="85,44,0,0" Name="lblLessonI" VerticalAlignment="Top" Width="116" />
             <Label Content="Decorating" FontFamily="Leelawadee" FontSize="20" Height="45" HorizontalAlignment="Left" Margin="85,95,0,0" Name="lblLessonII" VerticalAlignment="Top" Width="147" />
             <Label Content="Folding" FontFamily="Leelawadee" FontSize="20" Height="45" HorizontalAlignment="Left" Margin="85,146,0,0" Name="lblLessonIII" VerticalAlignment="Top" Width="116" />
@@ -29,4 +28,4 @@
         <Label Content="         0 / 1500 points"  FontFamily="Leelawadee" FontSize="20" Height="37" HorizontalAlignment="Left" Margin="176,493,0,0" Name="label2" VerticalAlignment="Top" Width="259" />
         <Button Content="BACK" Height="53" HorizontalAlignment="Left" Margin="12,635,0,0" Name="btnLesBack" VerticalAlignment="Top" Width="112" />
     </Grid>
-</Page>
+</UserControl>
