--- a/HCI Cooking/HCI Cooking/Pages/MainMenu.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/MainMenu.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="HCI_Cooking.Pages.MainMenu"
+﻿<UserControl x:Class="HCI_Cooking.Pages.MainMenu"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
