--- a/HCI Cooking/HCI Cooking/Pages/RecipeIndividualSteps.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeIndividualSteps.xaml
@@ -1,18 +1,20 @@
-﻿<Page x:Class="HCI_Cooking.Pages.RecipeIndividualSteps"
+﻿<UserControl x:Class="HCI_Cooking.Pages.RecipeIndividualSteps"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="700" d:DesignWidth="1000"
-	Title="RecipeIndividualSteps">
+      d:DesignHeight="700" d:DesignWidth="1000">
 
     <Grid Name="grdRIndiSteps">
-        <Image Height="275" HorizontalAlignment="Left" Margin="29,27,0,0" Name="image1" Stretch="Fill" VerticalAlignment="Top" Width="434" />
-        <TextBlock Height="182" HorizontalAlignment="Left" Margin="516,85,0,0" Name="txtBlkTips" Text="TIPS: TIPS TO THE NOOB CHEF" VerticalAlignment="Top" Width="449" Background="WhiteSmoke" />
-        <Button Content="Toogle View" Height="48" HorizontalAlignment="Left" Margin="907,12,0,0" Name="btnIndiToogleView" VerticalAlignment="Top" Width="81" />
-        <Button Content="Back" Height="313" HorizontalAlignment="Left" Margin="29,356,0,0" Name="btnIndivRecipeBack" VerticalAlignment="Top" Width="101" />
-        <Button Content="Next" Height="332" HorizontalAlignment="Left" Margin="864,337,0,0" Name="btnIndivRecipeNext" VerticalAlignment="Top" Width="101" />
-        <TextBlock Height="313" HorizontalAlignment="Left" Margin="177,356,0,0" Name="txtBlkIndivRecipeStep" Text="Recipe Instructions Go In Here" VerticalAlignment="Top" Width="657" Background="#FFF4F8E2" />
+         <TextBlock Height="182" HorizontalAlignment="Left" Margin="516,101,0,0" Name="txtBlkTips" Text="TIPS: TIPS TO THE NOOB CHEF" VerticalAlignment="Top" Width="449" Background="WhiteSmoke" />
+        <Button Content="Toogle View" Height="48" HorizontalAlignment="Left" Margin="884,12,0,0" Name="btnIndivToogleView" VerticalAlignment="Top" Width="81" Background="#FFC1C1FF" Click="btnIndiToogleView_Click" />
+        <Button Content="&lt;--" Height="300" HorizontalAlignment="Left" Margin="29,356,0,0" Name="btnIndivRecipePrev" VerticalAlignment="Top" Width="101" Background="#FFC1C1FF" Click="btnIndivRecipeBack_Click" FontSize="26" />
+        <Button Content="--&gt;" Height="300" HorizontalAlignment="Left" Margin="864,356,0,0" Name="btnIndivRecipeNext" VerticalAlignment="Top" Width="101" Background="#FFC1C1FF" Click="btnIndivRecipeNext_Click" FontSize="26" />
+        <TextBlock Height="300" HorizontalAlignment="Left" Margin="177,356,0,0" Name="txtBlkIndivRecipeStep" Text="Recipe Instructions Go In Here" VerticalAlignment="Top" Width="657" Background="#FFF4F8E2" />
+        <Border BorderBrush="Silver" BorderThickness="5" Height="245" HorizontalAlignment="Left" Margin="29,74,0,0" Name="brdrImagePlaceholder" VerticalAlignment="Top" Width="420" Background="#FFBF7CA6">
+            <Label Content="IMAGE PLACEHOLDER" Height="28" Name="lblimgPH" Width="152" />
+        </Border>
+        <Button Content="Back" Height="48" HorizontalAlignment="Left" Margin="29,12,0,0" Name="btnRecipeIndivBack" VerticalAlignment="Top" Width="75" Click="btnRecipeIndivBack_Click" />
     </Grid>
-</Page>
+</UserControl>
