--- a/HCI Cooking/HCI Cooking/Pages/AchievementMenu.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/AchievementMenu.xaml
@@ -8,10 +8,6 @@
     <Grid>
         <Label Content="Achivements" Height="55" HorizontalAlignment="Left" Margin="150,12,0,0" Name="label1" VerticalAlignment="Top" Width="195" IsEnabled="True" FontSize="30" />
         <Label Content="Stats" Height="42" HorizontalAlignment="Left" Margin="12,73,0,0" Name="label2" VerticalAlignment="Top" Width="119" FontSize="20" />
-        <Label Content="Meals cooked" Height="28" HorizontalAlignment="Left" Margin="30,129,0,0" Name="label3" VerticalAlignment="Top" />
-        <Label Content="Lessons Learned" Height="28" HorizontalAlignment="Left" Margin="30,163,0,0" Name="label4" VerticalAlignment="Top" />
-        <Label Content="Tips Taken" Height="28" HorizontalAlignment="Left" Margin="30,197,0,0" Name="label5" VerticalAlignment="Top" />
-        <Label Content="Badges earned" Height="28" HorizontalAlignment="Left" Margin="30,231,0,0" Name="label6" VerticalAlignment="Top" />
         <Label Content="Badges" FontSize="20" Height="42" HorizontalAlignment="Left" Margin="8,424,0,0" Name="label7" VerticalAlignment="Top" Width="119" />
         <Border Height="345" HorizontalAlignment="Left" Margin="477,73,0,0" Name="image1" VerticalAlignment="Top" Width="476" />
         <Label Content="Benny Bassilini" FontSize="30" Height="55" HorizontalAlignment="Left" IsEnabled="True" Margin="477,12,0,0" Name="label8" VerticalAlignment="Top" Width="476" />
@@ -47,5 +43,11 @@
             <Label Canvas.Left="94" Canvas.Top="35" Content="Learned how to make waffles" Height="52" Name="label18" Width="221" />
         </Canvas>
         <Button Content="Back" Height="55" HorizontalAlignment="Left" Margin="25,12,0,0" Name="btnAchievementBack" VerticalAlignment="Top" Width="88" Click="btnAchievementBack_Click" />
+        <Canvas Height="171" HorizontalAlignment="Left" Margin="26,121,0,0" Name="canvas7" VerticalAlignment="Top" Width="425" Background="WhiteSmoke">
+            <Label Content="Meals cooked" Height="28" Name="label3" Canvas.Left="22" Canvas.Top="14" />
+            <Label Content="Lessons Learned" Height="28" Name="label4" Canvas.Left="22" Canvas.Top="48" />
+            <Label Content="Tips Taken" Height="28" Name="label5" Canvas.Left="22" Canvas.Top="82" />
+            <Label Content="Badges earned" Height="28" Name="label6" Canvas.Left="22" Canvas.Top="116" />
+        </Canvas>
     </Grid>
 </UserControl>
