--- a/HCI Cooking/HCI Cooking/Pages/RecipeSelectionMenu.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeSelectionMenu.xaml
@@ -43,19 +43,19 @@
         <Grid Name="gridRecipeDisplay" Margin="224,12,12,29" Background="#FFD8E4FC">
             <Label Content="RECOMMENDED RECIPES" FontFamily="Leelawadee" FontSize="30" Height="47" HorizontalAlignment="Left" Margin="223,6,0,0" Name="lblRecRecipes" VerticalAlignment="Top" Width="352" />
             <Canvas Height="275" HorizontalAlignment="Left" Margin="18,59,0,0" Name="canvRecipe1" VerticalAlignment="Top" Width="347">
-                <TextBlock Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe1" Text="TextBlock" Width="347" Background="#FFF4F8E2" />
+                <TextBlock Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe1" Text="TextBlock" Width="347" Background="White" />
                 <Border MouseLeftButtonDown="brdrMPCimgPH_MouseLeftButtonDown" BorderBrush="White" BorderThickness="5" Canvas.Left="0" Canvas.Top="0" Height="187" Name="brdrRecipe1" Width="347" Background="#FFBF7CA6"></Border>
             </Canvas>
             <Canvas Height="275" HorizontalAlignment="Left" Margin="390,59,0,0" Name="canvRecipe2" VerticalAlignment="Top" Width="347">
-                <TextBlock Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe2" Text="TextBlock" Width="347" Background="#FFF4F8E2" Foreground="Black" />
+                <TextBlock Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe2" Text="TextBlock" Width="347" Background="White" Foreground="Black" />
                 <Border BorderBrush="White" BorderThickness="5" Canvas.Left="0" Canvas.Top="0" Height="187" Name="brdrRecipe2" Width="347" Background="#FFBF7CA6" />
             </Canvas>
             <Canvas Height="275" HorizontalAlignment="Left" Margin="18,349,0,0" Name="canvRecipe3" VerticalAlignment="Top" Width="347">
-                <TextBlock Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe3" Text="TextBlock" Width="347" Background="#FFF4F8E2" />
-                <Border Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" Height="187" Name="brdrRecipe3" Width="347" Canvas.Left="0" Canvas.Top="0" />
+                <TextBlock Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe3" Text="TextBlock" Width="347" Background="White" />
+                <Border Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" Height="187" Name="brdrRecipe3" Width="347" Canvas.Left="0" Canvas.Top="0"></Border>
             </Canvas>
             <Canvas Height="275" HorizontalAlignment="Left" Margin="390,349,0,0" Name="canvRecipe4" VerticalAlignment="Top" Width="347">
-                <TextBlock Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe4" Text="TextBlock" Width="347" Background="#FFF4F8E2"/>
+                <TextBlock Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe4" Text="TextBlock" Width="347" Background="White"/>
                 <Border Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" Height="187" Name="brdrRecipe4" Width="347" Canvas.Left="0" Canvas.Top="0" />
             </Canvas>
         </Grid>
